<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3"
        />

    <TextView
        android:id="@+id/instructionLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_h"
        android:theme="@style/boldTextViewStyle"
        android:text="@string/welcomeText"
        android:textSize="25sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/instructionLabel2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructionLabel1"
        android:theme="@style/boldTextViewStyle"
        android:text="@string/instructionText2"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        />


    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:theme="@style/buttonStyle"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:text="@string/next"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>